Added some case project objectives

--- a/case/s_objectives.tex
+++ b/case/s_objectives.tex
@@ -1,2 +1,80 @@
 
  \section{Project objectives}
+
+The objective of the project was to create a new kind of recording system for kindergartens. The system would allow the tracking of the arrival, departure and absences of the children in the groups. The main goal was to make a user-friendly system which connects parents, employees of the kindergartens and the administrative personnel in the municipality. The connection between the stakeholders would enable the planning of the need for day care and the real-time tracking of the nurses and children. With these features the system would allow the development of dynamic hour-based billing models.
+
+The main functionality of the system would be that the nurses are able to record the presences of the children with mobile devices. The recordings will be collected to a database serving different services for nurses, parents and administrative personnel in the kindergartens. The services would include a mobile client for nurses, a desktop client for parents and another desktop client for administrative personnel. The ultimate goal in which these clients are aimed at, is to bring the daycare system towards a genuinely transparent process, which encourages the parents to participate more in the early childhood education.
+
+
+ \section{Team and Phases}
+
+The project was divided into multiple phases. In the scope of this thesis, five phases are observed. Each of the phases had a couple of predefined objectives and a schedule.
+
+% http://www.qsm.com/resources/function-point-languages-table
+% Function points
+
+% ensimmäinen MVP
+% pieni ja yksinkertainen
+% kokeilut, testausta siirrettiin tulevaisuuteen
+% featuret edellä, testaus jälkikäteen
+% asioiden validointi, epäselvät speksit -> tuntui turhalta testata ilman tietoa onko toiminnallisuus järkevää
+
+
+
+% -Kerrotaan prosessista ja tiimistä 
+
+
+
+% * Vaihe 1
+% 	* Aikataulu: 20.11.2013-15.2.2013
+% 	* Budjetti: 66 690€ (60 000€)				26%
+%	* Function points 				130 (+130)
+% 	* Pääkontentti: 
+% 		* Lasten ja hoitajien läsnäolon mobiilikirjaus
+% 		* Admin UI päiväkotien, ryhmien, lapsien ja hoitajien tietojen syöttämiseen
+% 	* Tiimi
+% 		* Osmo
+% 		* Mike
+% 		* Antti
+% 		* Jouni
+% 		* Elice
+% * Vaihe 2-3
+% 	* Aikataulu: 19.2.2013-4.6.2013
+% 	* Budjetti: 56%   144 840€ (136 000€)
+%	* Function points 				415 (+285)
+% 	* Pääkontentti: 
+% 		* Kommunikointi päiväkodin ja kodin välillä
+% 		* Hoitosuunnitelmat
+% 		* Päiväkodin käyttöliittymä tietojen selaamiseen ja muokkaukseen sekä raportointiin 
+% 	* Tiimi
+% 		* Osmo
+% 		* Mike
+% 		* Kalle
+% 		* Mikko (huhtikuu ->)
+% 		* Elice
+% * Vaihe 4
+% 	* Aikataulu: 5.6.2013 - 15.7.2013
+% 	* Budjetti: 6%   15 000€
+%	* Function points 				475 (+50)
+% 	* Pääkontentti: 
+% 		* Perhepäivähoidon toiminnot ja rajapinnat 
+% 	* Tiimi
+% 		* Osmo
+% 		* Mike (osa-aikainen)
+% 		* Miro
+% 		* Kimmo
+% 		* (Elice)
+% * Vaihe 5
+% 	* Aikataulu: 15.7.2013 - 16.7.2013
+% 	* Budjetti: 12%   30 000€
+%	* Function points 				500 (+25)
+% 	* Pääkontentti: 
+% 		* Läsnäolotietomallin uudistus, läsnäolotietojen esitys ja muokkaus, kulukorvaukset kunta UI:hin 
+% 	* Tiimi
+% 		* Osmo (osa-aikainen)
+% 		* Mike
+% 		* Miro
+% 		* Kimmo
+% 		* (Elice)
+
+
