--- a/case/s_objectives.tex
+++ b/case/s_objectives.tex
@@ -17,6 +17,8 @@ The project was divided into multiple phases. In the scope of this thesis, five 
 
 The development team consisted of a few developers, a user experience and design specialist and a project manager. The size and structure of the development team stayed rather consistent, but the individuals belonging to the team were changed several times during the project. Also the pace of the development varied somewhat between the phases.
 
+In the description of each of the phases, the amount of functionality is approximated by using a conversion from the amount of source code lines to function points. The user interface is implemented with web technologies, so the amount of Javascript code is used. For the backend, the implementation language is Groovy, which is assumed to be close to Java in function points. \textbf{TODO: viite http://www.qsm.com/resources/function-point-languages-table}
+
 % Content
 \textbf{Phase one.} The feature content of the first phase included the implementation of the mobile client and administration interface. The mobile client was for recording the presences of the children and the nurses. The administration interface included the principal editing of kindergartens, care groups, children and nurses.
 
@@ -29,49 +31,25 @@ The continuous integration was handled with a product called Bamboo. It was conf
 
 \textbf{!!!!! Spock testing framework?? !!!!}
 
-% * Vaihe 2-3
-% 	* Aikataulu: 19.2.2013-4.6.2013
-% 	* Budjetti: 56%   144 840€ (136 000€)
-%	* Function points 				415 (+285)
-% 	* Pääkontentti: 
-% 		* Kommunikointi päiväkodin ja kodin välillä
-% 		* Hoitosuunnitelmat
-% 		* Päiväkodin käyttöliittymä tietojen selaamiseen ja muokkaukseen sekä raportointiin 
-% 	* Tiimi
-% 		* Osmo
-% 		* Mike
-% 		* Kalle
-% 		* Mikko (huhtikuu ->)
-% 		* Elice
-
 % Content
 \textbf{Phases two and three.} These two phases shared some goals so they are merged in the project records. During these phases, the development targets were in the communication, planning and administration. Communication between the kindergarten and children's home was implemented to the mobile client and the desktop client for the parents. For the parents, a tool for planning the future presences of the children was implemented. These presences were intended to help the personnel of the kindergarten plan the future shifts of the nurses. The last big feature for these phases was a desktop client for the administrative personnel of the municipality. This manager client for the kindergarten management included features for browsing and editing the kindergarten information, including the information about the children and the nurses. In addition, this manager client could generate reports describing the recent history of the kindergarten.
 
 % Time frame, team, budget, new features and bugs, function points
-Phases two and three took 105 days total. At the beginning of the phase two, the team consisted of two developers, a UX specialist and a project manager. After a one third of the period, a third developer was included in the team. These two phases took approximately 56\% of the total budget. According to the Pivotal Tracker, 55 new features were implemented and 2 bugs were fixed. New source code was worth of 285 function points, totaling 415 function points for the project so far.
+Phases two and three took 105 calendar days in total. At the beginning of the phase two, the team consisted of two developers, a UX specialist and a project manager. After a one third of the period, a third developer was included in the team. These two phases took approximately 56\% of the total budget. According to the Pivotal Tracker, 55 new features were implemented and 2 bugs were fixed. New source code was introduced worth of 285 function points, totaling 415 function points for the project so far.
 
 % Things affecting quality
+During these phases, the quality of the project shifted in different directions. A staging server environment identical to the production server was created. The staging server was integrated with the continuous integration server. The staging server had two purposes: the customer could demonstrate the application to potential customers and some system testing could be done in the staging server.
 
-During these phases, the quality aspects of the project shifted in different directions. A staging server environment identical to the production server was created. The staging server was integrated with the continuous integration server. The staging server had two purposes: the customer could demonstrate the application to potential customers and some system testing could be done in the staging server. 
-
-% * Vaihe 4
-% 	* Aikataulu: 5.6.2013 - 15.7.2013
-% 	* Budjetti: 6%   15 000€
-%	* Function points 				475 (+50)
-% 	* Pääkontentti: 
-% 		* Perhepäivähoidon toiminnot ja rajapinnat 
-% 	* Tiimi
-% 		* Osmo
-% 		* Mike (osa-aikainen)
-% 		* Miro
-% 		* Kimmo
-% 		* (Elice)
-\textbf{Phase four.}
+In addition to the introduction of the staging server, the quality of the project was affected by problems with testing. Testing the user interfaces of the application became an issue, which eventually lead to total disabling of the user interface tests. The issues were related to gradually degrading tests, which in the end impeded the usage of the continuous integration environment.
 
 % Content
-% Time frame, team, budget, new features and bugs, function points
-% Things affecting quality
+\textbf{Phase four.} In the fourth phase the main goal was to implement the support for the features and APIs for family daycare. These included several exceptions to the ordinary kindergarten operation, for example calculating the compensation of expenses for the care provider.
 
+% Time frame, team, budget, new features and bugs, function points
+The time frame for the fourth phase was 40 calendar days. The team included two full-time developers, one part-time developer, a UX specialist available when needed and a project manager. The budget of the fourth phase took only 6\% of the total budget. The history data from Pivotal Tracker reveals 8 features and 3 bugs for this phase. The amount of source code raised by 50 function points to a total of 475 function points.
+
+% Things affecting quality
+No major changes to the quality aspects of the project in the fourth phase. User interface tests were kept disabled and testing of the new features was handled manually.
 
 % * Vaihe 5
 % 	* Aikataulu: 15.7.2013 - 16.7.2013
@@ -85,22 +63,14 @@ During these phases, the quality aspects of the project shifted in different dir
 % 		* Miro
 % 		* Kimmo
 % 		* (Elice)
-\textbf{Phase five.}
 
 % Content
+\textbf{Phase five.} In the fifth phase, REFAKTOROINTI?????? TODO-HÄLÄRM!!
+
+
 % Time frame, team, budget, new features and bugs, function points
+The fifth phase lasted 32 calendar days. The budget for this phase was around 12\% of the total budget. Three developers, an on-demand UX specialist and a part-time project manager aggregated the team for this phase. Pivotal Tracker contains only one feature and one bug allocated for this phase. The veracity of these numbers can be questioned and it is possible that the usage of the tracker was neglected for this phase. \textbf{TODO!?!} A total of 25 function points were implemented as new source code and after this phase the total function points reached an even 500 function points. 
+
 % Things affecting quality
-
-% http://www.qsm.com/resources/function-point-languages-table
-% Function points
-
-
-
-
-
-
-
-% kokeilut, testausta siirrettiin tulevaisuuteen
-% featuret edellä, testaus jälkikäteen
-% asioiden validointi, epäselvät speksit -> tuntui turhalta testata ilman tietoa onko toiminnallisuus järkevää
+Some major refactoring tasks of the application were done in this phase, so the structure of the application was improved. Thus the overall quality of the application should have became higher.
 
