Corrected calculations after adding chores as features

--- a/case/s_objectives.tex
+++ b/case/s_objectives.tex
@@ -23,19 +23,17 @@ In the description of each of the phases, the amount of functionality is approxi
 \textbf{Phase one.} The feature content of the first phase included the implementation of the mobile client and administration interface. The mobile client was for recording the presences of the children and the nurses. The administration interface included the principal editing of kindergartens, care groups, children and nurses.
 
 % Time frame, team, budget, new features and bugs, function points
-The phase lasted 87 calendar days and the team in the first phase consisted of three developers, a UX specialist and a project manager. Budget of the phase was 26\% of the total budget of the five stages presented here. The phase included 86 new features registered in the Pivotal Tracker. 17 bugs were found during this phase. New source code were introduced worth of 130 function points.
+The phase lasted 87 calendar days and the team in the first phase consisted of three developers, a UX specialist and a project manager. Budget of the phase was 26\% of the total budget of the five stages presented here. The phase included 101 new features registered in the Pivotal Tracker. 17 bugs were found during this phase. New source code were introduced worth of 130 function points.
 
 % Things affecting quality
 In the first phase, the project quality was affected by the introduction of the continuous integration environment and a user interface testing framework. 
 The continuous integration was handled with a product called Bamboo. It was configured to track the changes in the repositories of both the mobile client and the desktop client. Whenever a change was pushed into the repository, the continuous integration system would run the tests and update the testing environment. In addition, Bamboo could update the production server by running the job manually. Testing of the mobile client was started with a small set of tests running with CasperJS.
 
-\textbf{!!!!! Spock testing framework?? !!!!}
-
 % Content
 \textbf{Phases two and three.} These two phases shared some goals so they are merged in the project records. During these phases, the development targets were in the communication, planning and administration. Communication between the kindergarten and children's home was implemented to the mobile client and the desktop client for the parents. For the parents, a tool for planning the future presences of the children was implemented. These presences were intended to help the personnel of the kindergarten plan the future shifts of the nurses. The last big feature for these phases was a desktop client for the administrative personnel of the municipality. This manager client for the kindergarten management included features for browsing and editing the kindergarten information, including the information about the children and the nurses. In addition, this manager client could generate reports describing the recent history of the kindergarten.
 
 % Time frame, team, budget, new features and bugs, function points
-Phases two and three took 105 calendar days in total. At the beginning of the phase two, the team consisted of two developers, a UX specialist and a project manager. After a one third of the period, a third developer was included in the team. These two phases took approximately 56\% of the total budget. According to the Pivotal Tracker, 55 new features were implemented and 2 bugs were fixed. New source code was introduced worth of 285 function points, totaling 415 function points for the project so far.
+Phases two and three took 105 calendar days in total. At the beginning of the phase two, the team consisted of two developers, a UX specialist and a project manager. After a one third of the period, a third developer was included in the team. These two phases took approximately 56\% of the total budget. According to the Pivotal Tracker, 69 new features were implemented and 2 bugs were fixed. New source code was introduced worth of 285 function points, totaling 415 function points for the project so far.
 
 % Things affecting quality
 During these phases, the quality of the project shifted in different directions. A staging server environment identical to the production server was created. The staging server was integrated with the continuous integration server. The staging server had two purposes: the customer could demonstrate the application to potential customers and some system testing could be done in the staging server.
@@ -69,7 +67,7 @@ No major changes to the quality aspects of the project in the fourth phase. User
 
 
 % Time frame, team, budget, new features and bugs, function points
-The fifth phase lasted 32 calendar days. The budget for this phase was around 12\% of the total budget. Three developers, an on-demand UX specialist and a part-time project manager aggregated the team for this phase. Pivotal Tracker contains only one feature and one bug allocated for this phase. The veracity of these numbers can be questioned and it is possible that the usage of the tracker was neglected for this phase. \textbf{TODO!?!} A total of 25 function points were implemented as new source code and after this phase the total function points reached an even 500 function points. 
+The fifth phase lasted 32 calendar days. The budget for this phase was around 12\% of the total budget. Three developers, an on-demand UX specialist and a part-time project manager aggregated the team for this phase. Pivotal Tracker contains 5 features and one bug allocated for this phase. The veracity of these numbers can be questioned and it is possible that the usage of the tracker was neglected for this phase. \textbf{TODO!?!} A total of 25 function points were implemented as new source code and after this phase the total function points reached an even 500 function points. 
 
 % Things affecting quality
 Some major refactoring tasks of the application were done in this phase, so the structure of the application was improved. Thus the overall quality of the application should have became higher.
