--- a/case/s_methods_processes.tex
+++ b/case/s_methods_processes.tex
@@ -1,77 +1,33 @@
 
- \section{Team and Phases}
+ \section{Quality in the project}
 
-% http://www.qsm.com/resources/function-point-languages-table
-% Function points
+Quality assurance in the Päikky project was not formally specified or planned beforehand. Methods and processes were selected primarily by individual developers and talked through with the whole team. Methods and tools were taken to use when necessary.
 
-% ensimmäinen MVP
-% pieni ja yksinkertainen
-% kokeilut, testausta siirrettiin tulevaisuuteen
-% featuret edellä, testaus jälkikäteen
-% asioiden validointi, epäselvät speksit -> tuntui turhalta testata ilman tietoa onko toiminnallisuus järkevää
+\subsection{Quality Methods and Processes}
 
+\textbf{Agile development.} The project was executed using agile development. The development was done in a week long sprints, which included a weekly review and planning session. The customer representatives were present in the weekly meetings. This enabled that the implementation of the features in the finished sprint could be assessed against the understanding of the customer. 
 
+\textbf{Static analysis.} The development of the application was mostly done by using some integrated development environment (IDE), although some of the developers involved in the development used only a source code editor without any intelligent features. These modern IDEs provide automatic tools for running continuous static analysis of source code. Using this kind of static analysis tool can prevent some defects from getting into the application. 
 
-% -Kerrotaan prosessista ja tiimistä 
+\textbf{Peer reviews.} With some parts of the application, ad hoc informal peer review sessions were used. These reviews were done in situations where the developer responsible for the implementation of a component had questions about the implementation details. In these brief discussions, parts of the code and thoughts about the implementation were reviewed by another developer. The end result of these session would usually be either an actual decision about the implementation or a joint decision that these details must be discussed with the whole development team or with the customer.
 
+\textbf{Testing.} During the project, testing was one of the most problematic forms of quality assurance. In the beginning of the project, all the testing was done manually by using the system via the user interface. The effort for implementing the automatic tests were postponed in favor of the development of new features. Some critical features in the backend were tested with integration tests and a set of user interface tests were implemented during the first two phases of the project. However, in later phases the user interface tests were disabled because of the problems with the test runner. Alternative options for test runner were investigated, but no good enough solution was found with the effort put into the studies. Also the amount of integration tests did not increase at the same pace as the number of critical features. The attitude towards testing was not neglecting, but the amount of new features to implement did depress the allocation of effort on the testing.
 
+% Preventing
+%	agile, embedded users, static analysis
+% pretest
+%	peer reviews, scrum sessions, client reviews?
+% testing
+%	unit testing, system testing, 
+% post-release
+%	latent defects
 
-% * Vaihe 1
-% 	* Aikataulu: 20.11.2013-15.2.2013
-% 	* Budjetti: 66 690€ (60 000€)				26%
-%	* Function points 				130 (+130)
-% 	* Pääkontentti: 
-% 		* Lasten ja hoitajien läsnäolon mobiilikirjaus
-% 		* Admin UI päiväkotien, ryhmien, lapsien ja hoitajien tietojen syöttämiseen
-% 	* Tiimi
-% 		* Osmo
-% 		* Mike
-% 		* Antti
-% 		* Jouni
-% 		* Elice
-% * Vaihe 2-3
-% 	* Aikataulu: 19.2.2013-4.6.2013
-% 	* Budjetti: 56%   144 840€ (136 000€)
-%	* Function points 				415 (+285)
-% 	* Pääkontentti: 
-% 		* Kommunikointi päiväkodin ja kodin välillä
-% 		* Hoitosuunnitelmat
-% 		* Päiväkodin käyttöliittymä tietojen selaamiseen ja muokkaukseen sekä raportointiin 
-% 	* Tiimi
-% 		* Osmo
-% 		* Mike
-% 		* Kalle
-% 		* Mikko (huhtikuu ->)
-% 		* Elice
-% * Vaihe 4
-% 	* Aikataulu: 5.6.2013 - 15.7.2013
-% 	* Budjetti: 6%   15 000€
-%	* Function points 				475 (+50)
-% 	* Pääkontentti: 
-% 		* Perhepäivähoidon toiminnot ja rajapinnat 
-% 	* Tiimi
-% 		* Osmo
-% 		* Mike (osa-aikainen)
-% 		* Miro
-% 		* Kimmo
-% 		* (Elice)
-% * Vaihe 5
-% 	* Aikataulu: 15.7.2013 - 16.7.2013
-% 	* Budjetti: 12%   30 000€
-%	* Function points 				500 (+25)
-% 	* Pääkontentti: 
-% 		* Läsnäolotietomallin uudistus, läsnäolotietojen esitys ja muokkaus, kulukorvaukset kunta UI:hin 
-% 	* Tiimi
-% 		* Osmo (osa-aikainen)
-% 		* Mike
-% 		* Miro
-% 		* Kimmo
-% 		* (Elice)
-
-
-
- \section{QA Methods and Processes Used}
-
+% -Käytetyt QA-metodit
+% -Static code analysis (IDEn vakiot)
+% -Communication ("embedded users")
+% -Testing(frontend, backend unit testing and integration tests)
+% -Occasional reviews (rarely)
+% -Continuous Integration
 
 
 % Alkuun testattiin pelkästään UI:n kautta
@@ -89,20 +45,55 @@
 % TDD käytetty satunnaisesti bugien korjauksissa
 
  
-% -Käytetyt QA-metodit
-% -Static code analysis (IDEn vakiot)
-% -Communication ("embedded users")
-% -Testing(frontend, backend unit testing and integration tests)
-% -Occasional reviews (rarely)
-% -Continuous Integration
 
 
  \section{Achieved Quality in The Project}
 
+ The quality achieved in the project was evaluated by interpreting the views and opinions of the product stakeholders. A separate informal interview sessions were arranged with the development team, project manager and the customer representatives. In addition, notes from a retrospective session after the fifth phase were considered.
+
+\subsection{Development Team}
+
+The overall feeling of the development team was that there should have been more effort put into the quality assurance during the project. The actual development suffered from the lack of effort put into the quality aspects. The shortage of testing and other methods of quality assurance seemed to affect negatively more and more as the project advanced. 
+
+\textbf{Testing.} Testing was one of the most important themes brought up in the interviews with the development team. In the beginning of the project, testing was taken into consideration and some effort was put into bringing testing tools in use. Testing tools for testing both the backend and frontend were studied and selected. Some tests for testing the most critical features in the backend were written through the whole project. For the frontend, only a few tests were written and the execution of those tests were unstable from the day one. The final setback for the frontend tests was got when the chosen test runner began to freeze during the execution of the tests.
+
+Biggest problems with testing was that there were no common practices or clear allocation of effort to the writing of the test cases. According to the understanding of the development team, there were defects present that could have been prevented with proper tests. The general feeling was that putting more effort to testing would have helped save time and money.
+
+Proposals for improving testing suggest that in the first place, the infrastructure for the testing should be repaired. The test runners should execute the tests reliably and the tests should be run in the CI environment. In addition to fixing the tools, the team and the customer should agree on a common practice for systematically testing both frontend and the backend of the system.
+
 % bugeja huomattiin, jotka olisi löytynyt testeillä
 % Tiimin mielestä testien kirjoituksella olisi säästänyt aikaa/rahaa
+% Mitä erilailla - Testit toimimaan
+% Mitä erilailla - UI
+% Mitä erilailla - Järjestelmällisemmät testit
+
+
+\textbf{Effort distribution.} Another wider issue mentioned by the development team was the distribution of effort between the quality assurance, bug fixes and new feature development. From the developers point of view, new features were prioritized too high and the velocity was kept too fast. In this constant hurry, some of the implementation details had to include shortcuts. These shortcuts led easily to taking technical debt and even to defects.
+
+Another problematic topic with effort distribution was the lack of separation between further development of features and the maintenance of the system in production. Most of the time, at least in later phases, the discovery of a defect could lead to an interruption for one or more of the developers. This affected the performance of the developers, because the simultaneous work on the new features and the running system meant that the developers faced multiple context switches during the ordinary work.
+
+Opinions for improving the situation included using more effort to quality related activities, including planning, documenting, implementing and testing the features. Allocating more effort to these topics would have first led into a slower pace of delivery with new features. In the long run though, it could have helped keep up the average delivery times of new features. Moreover, with this approach the structural quality could have been better. With better structural quality, the amount of defects and the work required to repair defects could have been lower.
+
+The maintenance of the running system could have also been done better. Using dedicated personnel for the defect repairs would have disengaged the developers implementing the new features, so the focus could have been kept in the implementation. Also a more flexible prioritization of the defect repairs may have had allowed more efficiency in working while still keeping the defect repair schedules sufficient.
+
+% Featuree featuren perään, asiakkaan puolelta
+% weppijutuissa nopeasti näkyvää asiaa “huonosti”
+% Tahti liian kova
+
+% Mitä erilailla - Rakenteellinen laatu kuntoon
+% Mitä erilailla - Aikavyöhykeasiat kerralla kuntoon / päätös tehdä ilman monimutkaisuutta
+
+
+% Mitä erilailla - Dokumentointi kuntoon
+
+% Mitä erilailla - Samaan aikaan samalla tiimillä nykyisen järjestelmän ylläpitoa ja uudet featuret
+% Mitä erilailla - Uudet featuret “suoraan” nykyiseen järjestelmään
+
+
+\textbf{CI environment.}
 % Testiympäristö ei ollut vastaava tuotannon kanssa, muistinvarainen vs HDD, Eri tietokanta
 % Bugeja tietokannan käsittelyssä, jotka ilmaantuivat vain tietyssä kannassa
+
 % Skaalaus
 % Päiväkotien määrän kasvaessa suorituskyky laski eksponentiaalsesti
 % Aiemmin ei tunnettu tarvetta optimoinnille
@@ -111,47 +102,49 @@
 % Ei mikään varsinainen ongelma, mutta yllätti
 
 
-% Featuree featuren perään, asiakkaan puolelta
-% weppijutuissa nopeasti näkyvää asiaa “huonosti”
-% Tahti liian kova
+\textbf{Shortcuts.}
+% Technical debt and shortcutting the features
 % tekninen velka -> realisoituu myöhemmin
 % Refaktoroinneille ei aikaa
 % Kunnon tekeminen vaatii aikaa, ei ratkea “rahalla”
 % Featureiden toteutus hidastuu eksponentiaalisesti kun tehdään pitkään nopeasti (ja huonosti)
 % Asiakas ei ymmärrä mitä aiemmat “oikopolut” tarkoitta
 % Asiakas ei muista teknistä velkaa
+
+
+\textbf{Common practises.}
+% Mitä erilailla - Definition of Done selkeämmäksi: testit kuuluu taskiin
+% Mitä erilailla - Rajapinnasta tarkempi määrittely
+% Mitä erilailla - “REST”, mutta muita tapoja seassa
+% Mitä erilailla - Mietitty puhdas REST vs clientille tehty API
+% Mitä erilailla - Clientin helppo noutaa datoja
+% Mitä erilailla - Requestien määrän minimointi
+
+% Tulevaisuudessa paremmin - järjestelmällisyys
+% Tulevaisuudessa paremmin - yhdessä sovitut prosessit
+% Tulevaisuudessa paremmin - Pelisäännöt, ei byrokratiaa
+% Tulevaisuudessa paremmin - Auttaisi jos ja kun porukka vaihtuu
+% Tulevaisuudessa paremmin - kaikki koodarit samojen käytäntöjen alle, myös koodaavat asiakkaat
+
+
+\textbf{Project management.}
+
 % Kommunikaatio aluksi tae hyvälle laadulle
 % Aluksi ongelmallisin kommunikaatio asiakkaan kanssa
 % Myöhemmin kommunikaatio failannut tiimin sisälläkin, koska osa-aikaisia samassa projektissa
-% 
-% Mitä erilailla
-% Testit toimimaan
-% UI
-% Järjestelmällisemmät testit
-% Definition of Done selkeämmäksi: testit kuuluu taskiin
-% Rajapinnasta tarkempi määrittely
-% “REST”, mutta muita tapoja seassa
-% Mietitty puhdas REST vs clientille tehty API
-% Clientin helppo noutaa datoja
-% Requestien määrän minimointi
-% Dokumentointi kuntoon
-% Rakenteellinen laatu kuntoon
-% Aikavyöhykeasiat kerralla kuntoon / päätös tehdä ilman monimutkaisuutta
-% Samaan aikaan samalla tiimillä nykyisen järjestelmän ylläpitoa ja uudet featuret
-% Uudet featuret “suoraan” nykyiseen järjestelmään
-% 
-% Tulevaisuudessa paremmin
-% järjestelmällisyys
-% yhdessä sovitut prosessit
-% Pelisäännöt, ei byrokratiaa
-% Auttaisi jos ja kun porukka vaihtuu
-% kaikki koodarit samojen käytäntöjen alle, myös koodaavat asiakkaat
-% laatuasioista “valittaminen” ei henkilökohtaista
-% pitäisi sopia etukäteen, että saa sanoa mistä vaan asiasta loukkaantumatta
-% review, pullrequestit
-% todettu hyviksi nyt kun käytössä
-% pitäisi osata sanoa koodaavalle asiakkaalle, että osa siitä aiheuttaa lisätyötä tiimille
-% Kommunikaatioo paremmaksi
+
+% Tulevaisuudessa paremmin - laatuasioista “valittaminen” ei henkilökohtaista
+% Tulevaisuudessa paremmin - pitäisi sopia etukäteen, että saa sanoa mistä vaan asiasta loukkaantumatta
+% Tulevaisuudessa paremmin - review, pullrequestit
+% Tulevaisuudessa paremmin - todettu hyviksi nyt kun käytössä
+% Tulevaisuudessa paremmin - pitäisi osata sanoa koodaavalle asiakkaalle, että osa siitä aiheuttaa lisätyötä tiimille
+% Tulevaisuudessa paremmin - Kommunikaatioo paremmaksi
+
+
+
+------------------------------------------------------
+
+
 
 
 
@@ -182,3 +175,8 @@
 % -kiire/featurekeskeisyys
 % -MVP -> tuotteeksi ilman tuotteistusta
 % -Rakenne, API
+
+
+
+
+\subsection{Customer and End Users}
