Added team opinions about shortcuts

--- a/case/s_methods_processes.tex
+++ b/case/s_methods_processes.tex
@@ -90,7 +90,8 @@ The maintenance of the running system could have also been done better. Using de
 % Mitä erilailla - Uudet featuret “suoraan” nykyiseen järjestelmään
 
 
-\textbf{CI environment.}
+% TODO: tämä mukaan???????????????????
+% \textbf{CI environment.} 
 % Testiympäristö ei ollut vastaava tuotannon kanssa, muistinvarainen vs HDD, Eri tietokanta
 % Bugeja tietokannan käsittelyssä, jotka ilmaantuivat vain tietyssä kannassa
 
@@ -102,7 +103,12 @@ The maintenance of the running system could have also been done better. Using de
 % Ei mikään varsinainen ongelma, mutta yllätti
 
 
-\textbf{Shortcuts.}
+\textbf{Shortcuts.} Taking shortcuts and making compromises in planning and implementing the features was seen somewhat necessary in this kind of project. There was a constant uncertainty of the requirements and expectations of the end users, which caused a need for experimenting with the features.
+
+A problem with these shortcuts was that the causes and existence of these were easily forgotten. As a consequence, the estimates of the tasks were easily skewed and the expectations from the features often lacked the facts caused from these compromises. In most cases there would have been a clear demand on refactoring the implementation, but frequently the refactoring was forgotten or left out because of the need for quick delivery of new features.
+
+There were no clear opinions on how to improve this, but there seemed to be a shared concern on the lack of refactoring the structure. The general feeling was that using more time on planning and implementing the features would have prevented many problems from occurring. Also the pace of implementing the features seemed to slow down in time, which was seen as an outcome of the poor structure. Proper restructuring could have solved this slowdown.
+
 % Technical debt and shortcutting the features
 % tekninen velka -> realisoituu myöhemmin
 % Refaktoroinneille ei aikaa
